# coconut

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  coconut.cmake  coconut.sh
bootstrap/: .gitignore  CMakeLists.txt
bootstrap/ccngen/: action_handling.c  ast.c  ast.dot  ccn_check.c  ccn_copy.c  ccn_free.c  dynamic_core.c  phase_driver.c  trav_data.c  vtables.c
bootstrap/ccngen/ccn/: ccn_types.h  dynamic_core.h
bootstrap/ccngen/ccngen/: action_handling.h  actions.h  ast.h  enum.h  trav_data.h
bootstrap/docs/source/: codegen.rst  dsl_syntax.rst  index.rst  manual.rst  working_with_traversals.rst
bootstrap/src/: commandline.c  commandline.h  globals.h  main.c  main.ccn
bootstrap/src/dot/: gen_dot.c
bootstrap/src/dynamic_backend/: file_switchers.c  gate.c  gen_action_header.c  gen_check_traversal.c  gen_constructor_call.c  gen_copy_traversal.c  gen_enum_values.c  gen_enums.c  gen_free_traversal.c  gen_node_base_and_union.c  gen_node_constructor.c  gen_node_init_funcs.c  gen_node_macros.c  gen_node_structs.c  (+10 more)
bootstrap/tests/: CMakeLists.txt
cocogen/: .gitignore  CMakeLists.txt  README.md  commandline.c  commandline.h  gen_helpers.h  globals.h  main.c  main.ccn  user_types.h
cocogen/ast/: CMakeLists.txt  ast.c  ast.h  constructors.c  constructors.h
cocogen/attribute_scheduler/: graph.c  graph.h
cocogen/backends/: CMakeLists.txt
cocogen/backup/: ccn_print.c
cocogen/ccngen/: action_handling.c  ag.c  ast.c  ast.dot  ccn_check.c  ccn_copy.c  ccn_free.c  ccn_print.c  trav.c  trav_data.c  visit.c  vtables.c
cocogen/dot/: gen_dot.c  gen_dot_ag.c  gen_dot_ag.h
cocogen/dynamic_backend/: API.c  API.h  CMakeLists.txt  collect_children.c  collect_children.h  file_switchers.c  gate.c  gen-action-handling.c  gen-actions.c  gen-actions.h  gen-ast.c  gen-ast.h  gen-check.c  gen-cmakelists.c  gen-copy.c  gen-enum.c  gen-enum.h  gen-free.c  gen-functions.h  gen-pass-user.c  gen-trav-data.c  gen-trav-user.c  gen-trav-user.h  gen-trav.c  gen-trav.h  gen-util.c  gen-vtables.c  gen_action_header.c  gen_ag_header.c  gen_ag_source.c  gen_check_traversal.c  gen_constructor_call.c  gen_copy_traversal.c  gen_enum_values.c  gen_enums.c  gen_equation_functions.c  gen_equation_includes.c  gen_free_traversal.c  gen_helpers.c  gen_helpers.h  (+29 more)
cocogen/filegen/: CMakeLists.txt  driver.c  driver.h  formatting.h  gen-actions.c  gen-ast-util.c  gen-ast-util.h  gen-ast.c  gen-ast.h  gen-cmakelists.c  gen-cmakelists.h  gen-copy.c  gen-copy.h  gen-enum.c  gen-enum.h  gen-free.c  gen-free.h  gen-globaldata.c  gen-globaldata.h  gen-trav-table.c  gen-trav-table.h  gen-trav-user.c  gen-trav-user.h  gen-trav.c  gen-util.c  gen-util.h  genmacros.h  reachability-matrix.c  reachability.c  reachability.h  util.c  util.h
cocogen/filehandling/: CMakeLists.txt  gen-driver.c  gen-driver.h
cocogen/filesystem/: gen_files.c  gen_files.h  utils.c  utils.h
cocogen/format/: CMakeLists.txt  format.c  format.h  gen-functions.h  out_macros.h
cocogen/framework/: CMakeLists.txt  main.c
cocogen/frontend/: CMakeLists.txt  buildsymboltable.c  check_attributes.c  check_existance.c  check_product_rules.c  ctihelp.c  ctihelp.h  reachability.c  reachability.h  symboltable.c  symboltable.h  unwrap_setexpr.c
cocogen/gen_helpers/: format.c  format.h  out_macros.h
cocogen/generator/: generator.c  generator.h
cocogen/phase-driver/: API.c  API.h  CMakeLists.txt  gen-action-handling.c
cocogen/phase_driver/: CMakeLists.txt  gen_action_array.c  gen_action_array_header.c  gen_action_handling.c  gen_gate_header.c  gen_ids_table.c  phase_driver.h
cocogen/pretty/: CMakeLists.txt  printer.c  printer.h
cocogen/print/: print.c
cocogen/sets/: literal_difference.c  literal_insert.c  literal_intersect.c  literal_lookup.c  literal_union.c  set.c  set.h
cocogen/static/: gates.c  gen_ast_structs.c
cocogen/tests/: CMakeLists.txt  main.coconut
cocogen/typed_backend/: API.c  API.h  CMakeLists.txt  gen-ast-definitions.c  gen-constructors.c  gen-copy-functions.c  gen-destructors.c  gen-functions.h  gen-gate-header.c  gen-node-functions.c  gen-pass-header.c  gen-subtree-functions.c  gen-trav-core-functions.c  gen-trav-functions.c  gen-user-trav-header.c
copra/: CMakeLists.txt  action_handling.c  actions_core.c  break_inspect_points.c  phase_driver.c
copra/ccn/: ccn.h  ccn_types.h  dynamic_core.h  phase_driver.h
copra/core/: action_handling.h  actions_core.h  break_inspect_points.h  cycle.h  globals.h  phase_driver.h  trav_core.h  vtables_core.h
copra/include/: CMakeLists.txt  action_handling.h  actions_core.h  ast_core.h  consist_checks.h  error.h  internal_phase_functions.h  trav_core.h  types.h  vtables_core.h
copra/source/: action_handling.c  break_inspect_points.c  consist_checks.c  cycle.c  error.c  globals.c  internal_phase_functions.c  trav_core.c
copra/src/: CMakeLists.txt  action_handling.c  actions_core.c  ast_core.c  break_inspect_points.c  consist_checks.c  cycle.c  dynamic_core.c  error.c  globals.c  internal_phase_functions.c  memory.c  phase_driver.c  trav_core.c
example/: CMakeLists.txt  civic.coconut  main.c  pass_createast.c  simple.ccn  trav_simpleprint.c
example/ccngen/: action_handling.c  ast.c  ccn_check.c  ccn_copy.c  ccn_free.c  vtables.c
examples/calculator/: CMakeLists.txt
framework/: CMakeLists.txt  main.c
framework/inc_core/: CMakeLists.txt  actions_core.h  ast_core.h  copy_core.h  free_core.h  trav_core.h  types.h  vtables_core.h
framework/include/: CMakeLists.txt  ast_core.h  free_core.h
framework/source/: CMakeLists.txt  ast_core.c
framework/src_core/: CMakeLists.txt  actions_core.c  ast_core.c  copy_core.c  free_core.c  trav_core.c
palm/: CMakeLists.txt  README.md  tests.c
palm/src/: CMakeLists.txt  array.c  assert.c  ctinfo.c  dbug.c  filesystem.c  hash_table.c  imap.c  internal_copy_functions.c  internal_copy_functions.h  internal_key_functions.c  internal_key_functions.h  log.c  lookup_table.c  lookup_table.h  map.c  map.coming  memory.c  module.mk  print.c  set.c  set_implementations.c  smap.c  str.c
palm/tests/: tests.c
(+373 files in other folders)
